# google-cloud-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
gcp/: Cargo.toml  README.md
gcp-derive/: Cargo.toml  README.md
gcp-derive/src/: lib.rs
gcp-derive/tests/: 01-simple.rs  02-nested.rs  tests.rs
gcp/src/: error.rs  lib.rs
gcp/src/authorize/: mod.rs
gcp/src/datastore/: key.rs  mod.rs  query.rs  value.rs
gcp/src/pubsub/: client.rs  message.rs
gcp/src/storage/: bucket.rs  mod.rs
gcp/src/tests/: datastore.rs  pubsub.rs
gcp/src/vision/: likelihood.rs
gcp/src/vision/api/: google.r#type.rs
google-cloud/: Cargo.toml  README.md  build.rs
google-cloud-derive/: Cargo.toml  README.md
google-cloud-derive/src/: casing.rs  lib.rs
google-cloud-derive/tests/: 01-simple.rs  02-nested.rs  03-enums.rs  tests.rs
google-cloud/protos/: README.md
google-cloud/src/: error.rs  lib.rs  utils.rs
google-cloud/src/authorize/: mod.rs
google-cloud/src/datastore/: client.rs  entity.rs  index_excluded.rs  key.rs  mod.rs  query.rs  transaction.rs  value.rs
google-cloud/src/datastore/api/: google.api.rs  google.datastore.v1.rs  google.r#type.rs
google-cloud/src/deserializer/: mod.rs
google-cloud/src/pubsub/: client.rs  message.rs  mod.rs  subscription.rs  topic.rs
google-cloud/src/pubsub/api/: google.api.rs  google.pubsub.v1.rs
google-cloud/src/storage/: bucket.rs  client.rs  object.rs
google-cloud/src/storage/api/: bucket.rs  object.rs
google-cloud/src/tasks/: client.rs  mod.rs  queue.rs  task.rs  task_authorization.rs  task_request_types.rs  utils.rs
google-cloud/src/tasks/api/: google.api.rs  google.cloud.tasks.v2beta3.rs  google.iam.v1.rs  google.r#type.rs
google-cloud/src/tests/: datastore.rs  mod.rs  pubsub.rs  storage.rs  tasks.rs  vision.rs
google-cloud/src/vision/: client.rs  image.rs
google-cloud/src/vision/api/: google.api.rs  google.cloud.vision.v1.rs  google.longrunning.rs  google.r#type.rs  google.rpc.rs
google-cloud/src/vision/text/: config.rs
src/: error.rs  lib.rs  tests.rs  utils.rs
src/authorize/: mod.rs
src/datastore/: client.rs  entity.rs  fmt.rs  key.rs  mod.rs  mutation.rs  value.rs
src/datastore/api/: google.datastore.v1.rs  google.r#type.rs
src/pubsub/: client.rs  message.rs  mod.rs  subscription.rs  topic.rs
src/pubsub/api/: google.api.rs  google.pubsub.v1.rs
src/storage/: bucket.rs  client.rs
src/storage/api/: bucket.rs  bucket_acl.rs  mod.rs  object_acl.rs
src/tests/: datastore.rs  mod.rs  pubsub.rs  storage.rs  vision.rs
src/vision/: bounding_box.rs  client.rs  mod.rs
src/vision/api/: google.cloud.vision.v1.rs  google.longrunning.rs
src/vision/face/: annotation.rs  config.rs
src/vision/text/: annotation.rs  config.rs  mod.rs
