[package]
name = "gcp"
description = "Asynchronous Rust bindings for Google Cloud Platform gRPC APIs"
version = "0.1.0"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2018"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "futures", "async", "protobuf", "google", "cloud"]

[dependencies]
tonic = { version = "0.1.0-alpha.5", features = ["rustls", "prost"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await", "compat"] }
tokio = { version = "=0.2.0-alpha.6" }
isahc = { version = "0.7.4", features = ["json"] }

prost = { git = "https://github.com/danburkert/prost", rev = "60eac4b" }
prost-types = { git = "https://github.com/danburkert/prost", rev = "60eac4b" }

http = { version = "0.1.18" }
bytes = { version = "0.4.12" }
chrono = { version = "0.4.9" }

serde = { version = "1.0.101", features = ["derive"] }
json = { package = "serde_json", version = "1.0.40" }
jwt = { package = "frank_jwt", version = "3.1.1" }

thiserror = { version = "1.0.4" }

[build-dependencies]
tonic-build = { version = "0.1.0-alpha.5" }

[features]
default = ["pubsub", "datastore"]
pubsub = []
datastore = []

[patch.crates-io]
prost = { git = "https://github.com/danburkert/prost", rev = "60eac4b" }
prost-types = { git = "https://github.com/danburkert/prost", rev = "60eac4b" }
