[package]
name = "gcp"
description = "Asynchronous Rust bindings for Google Cloud Platform gRPC APIs"
version = "0.1.0"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2018"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "futures", "async", "protobuf", "google", "cloud"]

[dependencies]
tonic = { version = "0.1.0-beta.1", features = ["tls", "prost"] }
tokio = { version = "0.2.6", features = ["macros"] }
isahc = { version = "0.8.2", features = ["json"] }
futures = { version = "0.3.1" }

prost = { git = "https://github.com/parasyte/prost", branch = "feature/defer-service-generator-finalize" }
prost-types = { git = "https://github.com/parasyte/prost", branch = "feature/defer-service-generator-finalize" }

http = { version = "0.2.0" }
bytes = { version = "0.4.12" }
chrono = { version = "0.4.10" }

serde = { version = "1.0.104", features = ["derive"] }
json = { package = "serde_json", version = "1.0.44" }
jwt = { package = "frank_jwt", version = "3.1.2" }

thiserror = { version = "1.0.9" }

[build-dependencies]
tonic-build = { version = "0.1.0-beta.1" }

[features]
default = ["pubsub", "datastore", "vision"]
pubsub = []
datastore = []
vision = []

[patch.crates-io]
prost = { git = "https://github.com/parasyte/prost", branch = "feature/defer-service-generator-finalize" }
prost-types = { git = "https://github.com/parasyte/prost", branch = "feature/defer-service-generator-finalize" }
prost-derive = { git = "https://github.com/parasyte/prost", branch = "feature/defer-service-generator-finalize" }
prost-build = { git = "https://github.com/parasyte/prost", branch = "feature/defer-service-generator-finalize" }
