[package]
name = "google-cloud-derive"
version = "0.1.0"
description = "Derive macros for the `google-cloud` library"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { version = "1.0.13", features = ["full", "extra-traits"] }
quote = "1.0.2"

[dev-dependencies]
trybuild = "1.0.19"
google-cloud = { path = "../google-cloud", features = ["derive"] }
