[package]
name = "google-cloud-derive"
version = "0.1.0"
description = "Derive macros for the `google-cloud` library"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
syn = { version = "1.0.17", features = ["full", "extra-traits"] }
quote = "1.0.3"
darling = "0.10.2"

[dev-dependencies]
trybuild = "1.0.25"
google-cloud = { path = "../google-cloud", features = ["derive"] }
