[package]
name = "google-cloud"
version = "0.2.1"
description = "Asynchronous Rust bindings for Google Cloud Platform gRPC APIs"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2018"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["grpc", "futures", "async", "google", "cloud"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google-apis-rs/google-cloud-rs"
documentation = "https://docs.rs/google-cloud"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# Derive macros
google-cloud-derive = { version = "0.2.1", path = "../google-cloud-derive", optional = true }

tonic = { version = "0.6", features = ["tls", "prost"] }
tokio = { version = "1.4.0", features = ["macros", "fs"] }
reqwest = { version = "0.11.2", optional = true, default_features = false, features = ["blocking", "json", "rustls-tls"] }
hyper = "0.14.4"
hyper-rustls = "0.22.1"
futures = "0.3.13"

prost = "0.9"
prost-types = "0.9"

http = "0.2.3"
chrono = "0.4.19"

serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "1.0" }
jwt = { package = "jsonwebtoken", version = "7.2.0" }

thiserror = "1.0.24"

bytes = { version = "1.0.1", optional = true }
percent-encoding = { version = "2.1.0", optional = true }

[build-dependencies]
tonic-build = "0.6"

[features]
default = []
full = ["pubsub", "datastore", "vision", "storage"]
full-derive = ["pubsub", "datastore-derive", "vision", "storage"]
pubsub = []
datastore = []
datastore-derive = ["datastore", "google-cloud-derive"]
vision = []
storage = ["reqwest", "percent-encoding"]
derive = ["datastore-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
